--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -13,21 +18,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -37,11 +27,24 @@
   }
 }
 
+.App-header {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 3rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 10px;
+  z-index: 1;
+}
+
 .chatbot-toggle-button {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: rgb(222, 9, 241);
+  background-color: #22547c;
   border: none;
   border-radius: 50%;
   width: 60px;
@@ -77,7 +80,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #6616fc;
+  color: #22547c;
   font-size: 16px;
   cursor: pointer;
   z-index: 1001;
