--- a/src/Compnents/BotAvatar/BotAvatar.css
+++ b/src/Compnents/BotAvatar/BotAvatar.css
@@ -6,13 +6,13 @@
   justify-content: center;
   align-items: center;
   font-size: 0.9rem;
-  background-color: #6616fc;
+  background-color: #22547c;
   color: #fff;
   margin-right: 15px;
 }
 
 .bot-header{
-  background-color: #6616fc;
+  background-color: #22547c;
   font-size: 0.9rem;
   color: #fff;
   padding: 15px;
