--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
 
 .chatbot-close-button {
   position: absolute;
-  top: 30px;
+  top: 15px;
   right: 15px;
   border: none;
   border-radius: 50%;
@@ -80,7 +80,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #22547c;
+  color: #fff;
   font-size: 16px;
   cursor: pointer;
   z-index: 1001;
