--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,11 @@
   cursor: pointer;
   z-index: 1001;
 }
+
+.Toastify__toast-body{
+  margin: -10px;
+}
+
+.Toastify__close-button {
+margin-right: -96px;
+}
