--- a/src/LoginSignup/Auth.css
+++ b/src/LoginSignup/Auth.css
@@ -1,5 +1,5 @@
 .auth-container {
-  max-width: 600px; /* Increase the width to accommodate two fields per row */
+  max-width: 600px;
   margin: 50px auto;
   padding: 20px;
   border: 1px solid #ccc;
@@ -43,9 +43,19 @@ button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  margin-top: 20px; /* Add margin to separate the button from the last input */
+  margin-top: 20px;
 }
 
 button:hover {
   background-color: #0056b3;
+}
+
+.signup-message {
+  margin-top: 20px;
+}
+
+.signup-link {
+  color: blue;
+  cursor: pointer;
+  text-decoration: underline;
 }
