--- a/src/header/header.css
+++ b/src/header/header.css
@@ -62,6 +62,7 @@
   border-radius: 3px;
   background: #fff;
   color: #282c34;
+  font-weight: bold;
   cursor: pointer;
   align-items: center;
 }
@@ -133,16 +134,6 @@
 
   .login:hover {
     color: white;
-  }
-
-  .signup-btn {
-    padding: 10px 10px;
-    height: 2.4rem;
-    border-radius: 3px;
-    background: rgb(222, 9, 241);
-    color: white;
-    cursor: pointer;
-    align-items: center;
   }
 }
 
