--- a/src/Booking/BookingForm.css
+++ b/src/Booking/BookingForm.css
@@ -22,7 +22,8 @@
   margin-bottom: 5px;
 }
 
-.form-group input {
+.form-group input,
+.form-group select{
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
